--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -20,7 +20,7 @@
   </ion-item>
   <div id="container">
     <ion-button routerLink="/photo">Take Photo</ion-button>
-    <ion-button routerLink="/list">Photos</ion-button>
+    <ion-button routerLink="/items">Photos</ion-button>
   </div>
 
 </ion-content>
