--- a/src/app/photo/photo.page.html
+++ b/src/app/photo/photo.page.html
@@ -1,12 +1,15 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>photo</ion-title>
+    <ion-title>Take Photo</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/"></ion-back-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 
 <ion-content>
-  <img alt="Photo" [src]="photo" />
+  <img alt="Photo" src="../../assets/img/empty-image-png-7.png" />
   <ion-fab vertical="bottom" horizontal="center" slot="fixed">
     <ion-fab-button (click)="takePicture()">
       <ion-icon name="camera"></ion-icon>
