--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,5 +1,5 @@
 <ion-header [translucent]="true">
-  <ion-toolbar color="tertiary">
+  <ion-toolbar color="primary">
     <ion-title> GPhoto </ion-title>
   </ion-toolbar>
 </ion-header>
