--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,17 +7,12 @@
 <ion-content>
 
   <ion-item>
-
-    <ion-card>
-      <ion-item>
-        <ion-icon name="image" slot="start"></ion-icon>
-        <ion-label>Photos & locations</ion-label>
-      </ion-item>
-      <ion-card-content>
-        This app lets you to take a picture and tells your exact location
-      </ion-card-content>
-    </ion-card>
+    <ion-label text-wrap><h1>Photos & locations</h1></ion-label>
   </ion-item>
+  <ion-item>
+    <ion-label text-wrap>This app lets you to take a picture and tells your exact location</ion-label>
+  </ion-item>
+
   <div id="container">
     <ion-button routerLink="/photo">Take Photo</ion-button>
     <ion-button routerLink="/items">Photos</ion-button>
