--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,7 +7,7 @@
 <ion-content>
 
   <ion-item>
-    <ion-label text-wrap><h1>Photos & locations</h1></ion-label>
+    <ion-label text-wrap><h1>Photo & location</h1></ion-label>
   </ion-item>
   <ion-item>
     <ion-label text-wrap>This app lets you to take a picture and tells your exact location</ion-label>
