--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -15,7 +15,7 @@
 
   <div id="container">
     <ion-button routerLink="/photo">Take Photo</ion-button>
-    <ion-button routerLink="/items">Photos</ion-button>
+    <ion-button routerLink="/items">Gallery</ion-button>
   </div>
 
 </ion-content>
