--- a/src/app/items/items.page.html
+++ b/src/app/items/items.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar color="primary">
-    <ion-title>Photos</ion-title>
+    <ion-title>Gallery</ion-title>
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/"></ion-back-button>
     </ion-buttons>
