--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -14,6 +14,7 @@
   </ion-item>
 
   <div id="container">
+    <img src="assets/img/the_child_star_wars_gallery.jpg" id="image"> <br>
     <ion-button routerLink="/photo">Take Photo</ion-button>
     <ion-button routerLink="/items">Gallery</ion-button>
   </div>
