--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,6 +1,5 @@
 #container {
   text-align: center;
-
   position: absolute;
   left: 0;
   right: 0;
@@ -24,4 +23,11 @@
 
 #container a {
   text-decoration: none;
+}
+
+#image {
+  background-repeat: no-repeat;
+  background-size: 300px;
+  width: 400px;
+  height: 400px;
 }
